Updated dropdown content styling: - Reduced the size of the dropdown box - Made text tighter within the dropdown - Ensured dropdown content appears above the scale - Adjusted z-index for proper layering

--- a/src/AutoComplete.css
+++ b/src/AutoComplete.css
@@ -1,4 +1,28 @@
-/* Autocomplete Municipal*/
+/* Autocomplete Municipal */
+
+.ac-autocomplete-container {
+  position: relative;
+  display: flex;
+  top: 72px;
+  left: 12px;
+  flex-direction: column;
+  width: 70%;
+}
+
+.ac-autocomplete-input {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.ac-suggestions-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
 
 .ac-suggestions {
   border: 1px solid #ddd;
@@ -8,13 +32,15 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 100%;
-  position: absolute;
-  z-index: 3;
+  width: 98.5%;
+  z-index: 1000; /* Ensure it's above other elements */
+  position: absolute; /* Ensure it's positioned relative to the container */
+  top: 30px; /* Move it further down */
+  left: 0px; /* Align with the input */
 }
 
 .ac-suggestions li {
-  padding: 10px;
+  padding: 5px;
   cursor: pointer;
 }
 
@@ -22,28 +48,13 @@
   background-color: #f4f4f4;
 }
 
-.ac-autocomplete-container {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-}
-
-.ac-autocomplete-input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
 .ac-autocomplete-suggestions {
   position: absolute;
   border: 1px solid #ddd;
   background: white;
-  z-index: 1;
+  z-index: 100;
   width: 100%;
-  max-height: 150px;
+  max-height: 500px;
   overflow-y: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
@@ -73,4 +84,11 @@
 
 .ac-autocomplete-suggestions::-webkit-scrollbar-track {
   background: #f1f1f1;
+}
+
+@media (max-width: 768px) {
+  .ac-suggestions {
+    top: 30px; /* Adjust this value for smaller screens */
+    left: 0px; /* Align with the input */
+  }
 }
